<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group_modes">
        <item
            android:id="@+id/menu_easy"
            android:orderInCategory="1"
            android:title="@string/menu_easy">
        </item>
        <item
            android:id="@+id/menu_medium"
            android:orderInCategory="2"
            android:title="@string/menu_medium">
        </item>
        <item
            android:id="@+id/menu_hard"
            android:orderInCategory="3"
            android:title="@string/menu_hard">
        </item>
    </group>
    <group
        android:id="@+id/group_new_game">
        <item
            android:id="@+id/menu_new_game"
            android:title="@string/menu_new_game">
        </item>
    </group>
    <item
        android:id="@+id/menu_exit"
        android:title="@string/menu_exit">
    </item>
</menu>
